# logle

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ColoredCube.cpp  Example.cpp  InputTest.cpp  LICENSE  ModelLoading.cpp  README.md  TexturedCube.cpp  Triangle.cpp  cmake_install.cmake  glfw_test.cbp  glfw_test.cpp  glfw_test.layout  opengl-tutorials.cpp
core/: AbstractResult.cpp  AbstractResult.h  CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  abstract_result.cpp  abstract_result.h
input/: CMakeLists.txt  InputManager.cpp  InputManager.h
render/: BufferManager.cpp  BufferManager.h  CMakeLists.txt  Camera.cpp  Camera.h  LightSource.h  MeshLoader.cpp  MeshLoader.h  Scene.cpp  Scene.h  SimpleGeometry.cpp  SimpleGeometry.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h  TexturedGeometry.cpp  TexturedGeometry.h
render/geometry/: Geometry.cpp  Geometry.h
render/lighting/: LightSource.cpp  StaticLight.cpp  StaticLight.h
render/model/: MeshLoader.cpp  MeshLoader.h  StaticMesh.cpp  StaticMesh.h
render/text/: Text2D.cpp  Text2D.h
shader/: CMakeLists.txt  CompilationResult.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  UniformManager.cpp  UniformManager.h  cmake_install.cmake  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h
shaders/: simple.vert
shaders/font/: font.fshader  font.vshader
shaders/simple_shading/: shading.frag  shading.vert
shaders/textured/: textured.vert
